fix: unreadable timeline label

--- a/catppuccin.user.css
+++ b/catppuccin.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Github Catppuccin
 @namespace      github.com/catppuccin/github
-@version        1.1.2
+@version        1.1.3
 @description    Soothing pastel theme for GitHub
 @author         Catppuccin
 @updateURL      https://github.com/catppuccin/github/raw/main/catppuccin.user.css
@@ -708,7 +708,8 @@ disabledButtonBG(col)
         background-color:  $green;
     }
 
-    .timeline-comment-header .Label {
+    .timeline-comment-header .Label,
+    .timeline-comment .Label {
         color: var(--color-fg-muted);
     }
 
